--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "movie_appy",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
+    "start": "concurrently \"npm run serve\" \"npm run dev\"",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "json-server src/server/* -p 3001"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.14.8",
+    "concurrently": "^8.2.1",
+    "json-server": "^0.17.4",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
