--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "movie_appy",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "start": "concurrently \"npm run serve\" \"npm run dev\"",
     "dev": "vite",
@@ -14,7 +13,9 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.14.8",
     "concurrently": "^8.2.1",
+    "fetch": "^1.1.0",
     "json-server": "^0.17.4",
+    "nouislider": "^15.7.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
