--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nouislider": "^15.7.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue-slider-component": "^3.2.24"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
