--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "serve": "json-server src/server/* -p 3001"
+    "serve": "json-server ./src/server/kinopoisk-1.json -p 3001"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
